# GANCreator

./: CMakeLists.txt  README.md  config.json  main.cpp
data/: DataLoader.cpp  DataLoader.h
gan/: Gan.cpp  Gan.h
utils/: Logger.h
